# peek

./: .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
completions/: peek-cli.bash  peek-cli.fish  peek-cli.zsh
src/: browser.rs  cli.rs  errors.rs  file_search.rs  main.rs  utils.rs
