[package]
name = "peek"
version = "0.1.0"
edition = "2024"
authors = ["Enos Muthiani @lyznne <emuthiani26@gmail.com>"]
description = "A fast CLI tool to open files and directories in your default browser"
license = "MIT or Apache-2.0"
repository = "https://github.com/lyznne/peek"
keywords = ["cli", "browser", "open","file-viewer", "utility", "files", "directories"]
categories = ["command-line-utilities", "file-management"]


[dependencies]
clap= { version = "4.5", features = ["derive", "cargo"] }
open= "5.3"
anyhow= "1.0"
thiserror= "2.0"
walkdir= "2.3"

[dev-dependencies]
tempfile= "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "peek"
path = "src/main.rs"
